{
  "version": 4,
  "terraform_version": "0.12.18",
  "serial": 229,
  "lineage": "e0914745-b976-6dcb-b42f-385f6368560c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "NodeGroup",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:838522581324:security-group/sg-0d80e203db7b38e55",
            "description": "Security Group for all EKS Worker Nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d80e203db7b38e55",
            "ingress": [],
            "name": "TfEksDemo-ng",
            "name_prefix": null,
            "owner_id": "838522581324",
            "revoke_rules_on_delete": false,
            "tags": {
              "Application": "TfEksDemo",
              "Environment": "dev",
              "Name": "TfEksDemo-ng",
              "kubernetes.io/cluster/TfEksDemo": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-03b587bb9e076424c"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "EksControlPlane-Ingress-NodeGroups",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow Control Plane to receive communication from pods and kubelets",
            "from_port": 0,
            "id": "sgrule-1583852382",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0448aafc591484a9a",
            "self": false,
            "source_security_group_id": "sg-0d80e203db7b38e55",
            "to_port": 65535,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.NodeGroup"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "NodeGroup-Ingress-ControlPlane",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow worker nodes and kubelets to receive communication from EKS Control Plane",
            "from_port": 0,
            "id": "sgrule-2672907565",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0d80e203db7b38e55",
            "self": false,
            "source_security_group_id": "sg-0448aafc591484a9a",
            "to_port": 65535,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.NodeGroup"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "NodeGroup-Ingress-SSH",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow SSH into Node Group",
            "from_port": 22,
            "id": "sgrule-1686533326",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0d80e203db7b38e55",
            "self": false,
            "source_security_group_id": "sg-04e46d18bfb2cf321",
            "to_port": 22,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.NodeGroup"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "NodeGroup-Ingress-Self",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow worker nodes to communicate with each other",
            "from_port": 0,
            "id": "sgrule-281493707",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0d80e203db7b38e55",
            "self": false,
            "source_security_group_id": "sg-0d80e203db7b38e55",
            "to_port": 65535,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.NodeGroup"
          ]
        }
      ]
    }
  ]
}